--- a/lettle.html
+++ b/lettle.html
@@ -12,6 +12,10 @@
 		<meta content="#121213" name="theme-color" />
 		<meta content="#538D4E" property="theme-color" />
 
+		<meta name="title" content="Lettle" />
+		<meta name="description" content="Guess a mystery letter in only 4 tries!" />
+		<meta name="keywords" content="lettle, toodlenools, Lettle, Toodlenools, ToodleNools, toodle nools, Toodle nools, Toodle Nools" />
+
 		<link href=css/lettle.css rel=stylesheet> <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css> <link href=images/lettle-favicon.ico? rel=icon type=image/x-icon sizes=32x32> <link href=images/lettle-favicon-highres.ico? rel=apple-touch-icon type=image/x-icon sizes=192x192>
 		<script src="js/lettle.js"></script>
 		<script src="js/confetti.js"></script>
