changed colors of instruction letters

--- a/lettle.html
+++ b/lettle.html
@@ -49,7 +49,7 @@
 					</svg>
 				</header>
 				<div id="instructions-container">
-					<p id="instructions">Enter a letter between <span class="square" id="blue">A</span> and <span class="square" id="orange">Z</span></p>
+					<p id="instructions">Enter a letter between <span class="square" id="orange">A</span> and <span class="square" id="blue">Z</span></p>
 				</div>
 				<div id="board-container">
 					<div id="board"></div>
