--- a/lettle.html
+++ b/lettle.html
@@ -108,7 +108,7 @@
 			</div>
 			<div id="info">
 				<header>
-					<h1 class="title" style="font-size: 2.25rem; letter-spacing: 0">HOW TO PLAY</h1>
+					<h1 class="title" style="letter-spacing: 0px">HOW TO PLAY</h1>
 				</header>
 				<svg id="close-info" onclick="toggleInfo()" xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 0 24 24" width="32px">
 					<path fill="gainsboro" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
