Realigned How to Play text

--- a/lettle.html
+++ b/lettle.html
@@ -115,8 +115,8 @@
 				</svg>
 				<div id="info-container">
 					<div id="how-to-play">
-						<h3 class="info-text">Guess the letter in 4 tries.</h3>
-						<h3 class="info-text">After each guess, the tile changes color to show whether the target letter is before or after your guess alphabetically.</h3>
+						<h3 class="info-text" style="text-align: center">Guess the letter in 4 tries.</h3>
+						<h3 class="info-text" style="text-align: center">After each guess, the tile changes color to show whether the target letter is before or after your guess alphabetically.</h3>
 						<hr color="#3A3A3C" />
 						<h3 class="info-text" style="text-decoration: underline">Examples:</h3>
 						<div class="square" style="background-color: #ad5713; border-color: #ad5713; margin-left: 10px">H</div>
@@ -126,7 +126,7 @@
 						<div class="square" style="background-color: #538d4e; border-color: #538d4e; margin-left: 10px">L</div>
 						<h3 class="info-text">The letter is L, you win!</h3>
 						<hr color="#3A3A3C" />
-						<h3 class="info-text">After each game, you can click "Play again!" to play again.</h3>
+						<h3 class="info-text" style="text-align: center">After each game, you can click "Play again!" to play again.</h3>
 					</div>
 				</div>
 			</div>
