Updating versions for js and css files
This is to try to refresh iOS homescreen web apps

--- a/lettle.html
+++ b/lettle.html
@@ -16,8 +16,9 @@
 		<meta name="description" content="Guess a mystery letter in only 4 tries!" />
 		<meta name="keywords" content="lettle, toodlenools, Lettle, Toodlenools, ToodleNools, toodle nools, Toodle nools, Toodle Nools" />
 
-		<link href=css/lettle.css rel=stylesheet> <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css> <link href=images/lettle-favicon.ico? rel=icon type=image/x-icon sizes=32x32> <link href=images/lettle-favicon-highres.ico? rel=apple-touch-icon type=image/x-icon sizes=192x192>
-		<script src="js/lettle.js?2"></script>
+		<link href="css/lettle.css?v=3" rel="stylesheet" />
+		<link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css> <link href=images/lettle-favicon.ico? rel=icon type=image/x-icon sizes=32x32> <link href=images/lettle-favicon-highres.ico? rel=apple-touch-icon type=image/x-icon sizes=192x192>
+		<script src="js/lettle.js?v=3"></script>
 		<script src="js/confetti.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
